--- a/Admin/Admin.Css
+++ b/Admin/Admin.Css
@@ -2,7 +2,7 @@
 
 :root {
     --light: #f6f6f9;
-    --primary: #D32F2F;
+    --primary: #1976D2;
     --light-primary: #CFE8FF;
     --grey: #eee;
     --dark-grey: #AAAAAA;
